conformance/tests/httproute-multiple-routes-attachment-same-hostname-intersection.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-httproute-exact-hostname-x
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: listener-exact-hostname
    protocol: HTTP
    port: 80
    hostname: abc.example.com
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-httproute-wc-hostname-x
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: listener-wc-hostname
    protocol: HTTP
    port: 80
    hostname: "*.example.com"
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-wc-hostname-x-older
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gw-httproute-exact-hostname-x
    namespace: gateway-conformance-infra
  hostnames:
  - "*.example.com"
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-less-specific-wc-hostname-x-older
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gw-httproute-wc-hostname-x
    namespace: gateway-conformance-infra
  hostnames:
  - "*.com"
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
